# UnrealisticBranching

./: .gitignore  CITATION.cff  CMakeLists.txt  README.md  test.py
src/: BranchingHistory.cpp  BranchingHistory.h  DatasetWriter.cpp  DatasetWriter.h  EventhdlrUpdateFeatures.cpp  EventhdlrUpdateFeatures.h  FeaturesCalculator.cpp  FeaturesCalculator.h  RegressionModel.cpp  RegressionModel.h  Utils.cpp  Utils.h  branch_unrealistic.cpp  branch_unrealistic.h  branch_unrealisticTrained.cpp  branch_unrealisticTrained.h  cppmain.cpp  dialog_generateDataset.cpp  dialog_generateDataset.h  dialog_loadModel.cpp  dialog_loadModel.h  dialog_trainmodel.cpp  dialog_trainmodel.h  nodesel_random.cpp  nodesel_random.h  nodesel_random.hpp
src/mpi/: Master.cpp  Master.h  Node.cpp  Node.h  Slave.cpp  Slave.h  Worker.cpp  Worker.h
